[package]
name = "hugos"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.5.2"
modular-bitfield = "0.11.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
